# PubMed

./: README.md  ai_healthcare_results.csv  alzheimers_results.csv  covid_vaccine_results.csv  drug_discovery_results.csv  main.py  papers.csv  pyproject.toml  results.csv
backend_takehome/: main.py
