[project]
name = "backend-takehome"
version = "0.1.0"
description = "A CLI tool for fetching and filtering PubMed research papers."
authors = [
    {name = "GauriRaghuvanshi",email = "gauriraghuvanshi03@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
